--- a/package.json
+++ b/package.json
@@ -24,5 +24,7 @@
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "vue-template-compiler": "^2.6.14"
-  }
+  },
+  "_id": "devtest@0.1.0",
+  "readme": "ERROR: No README data found!"
 }
